# task_manager

./: .gitignore  Makefile  pyproject.toml  test_add_file
task_manager/: settings.py  urls.py
task_manager/apps/label/: admin.py  models.py  serializers.py  urls.py  views.py
task_manager/apps/label/migrations/: 0001_initial.py
task_manager/apps/status/: admin.py  models.py  serializers.py  urls.py  views.py
task_manager/apps/status/migrations/: 0001_initial.py
task_manager/apps/task/: models.py  serializers.py
task_manager/apps/task/migrations/: 0001_initial.py
task_manager/apps/user/: models.py  serializers.py  urls.py  views.py
task_manager/apps/user/migrations/: 0001_initial.py
task_manager/fixtures/: labels.yaml  statuses.yaml
